# wasm-wasi-testing

./: .gitignore  Cargo.toml  README.md  justfile
crates/wasi-help/: Cargo.toml
crates/wasi-help/src/: lib.rs
crates/wasmmm/: Cargo.toml
crates/wasmmm/src/: lib.rs
src/: main.rs
wit/: tcomp.wit
