[package]
name = "wasi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
wasmtime = { version = "=14.0.4", features = ["component-model"] }
wasmtime-wasi = "=14.0.4"

[workspace]
members = [
    "crates/wasi-help",
    "crates/wasmmm",
]
